@@ -1,0 +1,4 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/04 13:44:20 smb Exp $
+bin/stalonetray
+share/examples/stalonetray.rc
+man/man1/stalonetray.1
